--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "author": "phets team",
   "license": "MIT",
   "dependencies": {
+    "@types/cors": "^2.8.6",
     "@types/multer": "^1.3.10",
     "@types/uuid": "^3.4.5",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "multer": "^1.4.2",
     "typescript": "^3.6.3",
