--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "@types/cors": "^2.8.6",
     "@types/multer": "^1.3.10",
     "@types/uuid": "^3.4.5",
+    "axios": "^0.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-simple": "^0.5.6",
+    "moment": "^2.24.0",
     "multer": "^1.4.2",
     "typescript": "^3.6.3",
     "uuid": "^3.3.3"
